--- a/accounting/templates/plants/index.html
+++ b/accounting/templates/plants/index.html
@@ -1,9 +1,12 @@
-{% if plants %}
-    <ul>
-        {% for plant in plants %}
-            <li><a href="{% url 'plants:detail' plant.id %}">{{ plant.name }}</a></li>
-        {% endfor %}
-    </ul>
-{% else %}
-    <p>Все купили, вы не успели ¯\_(ツ)_/¯</p>
-{% endif %}
+{% extends "base_generic.html" %}
+{% block content %}
+    {% if plants %}
+        <ul>
+            {% for plant in plants %}
+                <li><a href="{% url 'accounting:plant_detail' plant.id %}">{{ plant.name }}</a></li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>Все купили, вы не успели ¯\_(ツ)_/¯</p>
+    {% endif %}
+{% endblock %}
